--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,4 +6,8 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
+anyhow = "1.0.86"
 clap = { version = "4.5.7", features = ["derive"] }
+csv = "1.3.0"
+serde = { version = "1.0.204", features = ["derive"] }
+serde_json = "1.0.120"
